fixed images not showing on homepage on mobile view

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -3326,7 +3326,6 @@ body.home #hero-caption.elementor-section {
   .home .elementor-element-75b9e62.featured-category-block {
     .uael-post-wrapper .uael-post__thumbnail {
       top: 0!important;
-      padding-bottom: 0!important;
     }
     .uael-post-wrapper .uael-post__thumbnail img.attachment-full {
       display: block!important;
